@@ -415,6 +415,26 @@ nautilus_window_slot_add_current_location_to_history_list (NautilusWindowSlot *s
 	}
 }
 
+/* returns either the pending or the actual current location - used by side panes. */
+static char *
+real_slot_info_get_current_location (NautilusWindowSlotInfo *info)
+{
+	NautilusWindowSlot *slot;
+
+	slot = NAUTILUS_WINDOW_SLOT (info);
+
+	if (slot->pending_location != NULL) {
+		return g_file_get_uri (slot->pending_location);
+	}
+
+	if (slot->location != NULL) {
+		return g_file_get_uri (slot->location);
+	}
+
+	g_assert_not_reached ();
+	return NULL;
+}
+
 static void
 nautilus_window_slot_dispose (GObject *object)
 {
@@ -480,7 +500,7 @@ nautilus_window_slot_info_iface_init (NautilusWindowSlotInfoIface *iface)
 	iface->inactive = nautilus_window_slot_inactive;
 	iface->get_window = nautilus_window_slot_get_window;
 	iface->get_selection_count = nautilus_window_slot_get_selection_count;
-	iface->get_current_location = nautilus_window_slot_get_location_uri;
+	iface->get_current_location = real_slot_info_get_current_location;
 	iface->set_status = nautilus_window_slot_set_status;
 	iface->get_title = nautilus_window_slot_get_title;
 	iface->open_location = nautilus_window_slot_open_location_full;
